<resources>
    <string name="app_name">Android Chess Group 10</string>
    <string name="resign">Resign</string>
    <string name="draw">Draw</string>
    <string name="undo">Undo</string>
    <string name="aimov">AI Move</string>
    <string name="replays">Recordings</string>
    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="back">Back</string>
    <string name="play">Play Selected</string>
    <string name="delete">Delete</string>
    <string name="recordings">Game Recordings</string>
    <string name="replaytitle">Game Recordings</string>
    <string name="replaydisplay">Game Playback</string>
    <string name="sortbyname">Name (Asc)</string>
    <string name="sortbyname2">Name (Desc)</string>
    <string name="sortbydate">Date (Asc)</string>
    <string name="sortbydate2">Date (Desc)</string>
    <string name="dosort">Sort by…</string>
    <string name="nextmove">Next Move</string>
    <string name="home">Home</string>
    <string name="winner1">White won! \u0020Black resigned.</string>
    <string name="winner2">Black won! \u0020White resigned.</string>
    <string name="winner3">The game was a draw!</string>
    <string name="winner4">Checkmate! \u0020White won.</string>
    <string name="winner5">Checkmate! \u0020Black won.</string>
    <string name="checkW">Check - White\'s turn</string>
    <string name="checkB">Check - Black\'s turn</string>
    <string name="Whitet">White\'s turn</string>
    <string name="Blackt">Black\'s turn</string>
    <string name="promo">Preferred Promotion</string>
    <string name="contentW">white promotion choice</string>
    <string name="contentB">black promotion choice</string>
</resources>